# valentine

./: .gitignore  Cargo.toml  Justfile  README.md  TODO  drop_tables.sh  valentine.toml.example
migrations/1/: up.sql
migrations/20170711045710_create_tables/: down.sql  up.sql
migrations/20180603202244_add_last_updated/: down.sql  up.sql
sass/: style.sass
src/: error.rs  macros.rs  main.rs  templates.rs  types.rs
src/cmd/: backup.rs  mod.rs  serve.rs  ssh.rs  web.rs
src/db/: create.rs  delete.rs  mod.rs  read.rs  update.rs
src/git/: mod.rs  network.rs  util.rs
src/repo/: mod.rs
src/routes/: git_routes.rs  mod.rs  repo.rs  types.rs  user.rs  util.rs
src/routes/repo/: issues.rs  mod.rs
src/routes/user/: mod.rs  repo.rs
src/sql/create/: public_key.sql  repo.sql  tables.sql  user.sql
src/sql/read/: check_login.sql  repo_exists.sql  repo_is_private.sql  user.sql  user_uuid.sql
templates/: 404.html  error.html  explore.html  head.html  home.html  navbar.html  repo.html  user.html
templates/repo/: commit.html  header.html  issue.html  issues.html  log.html  refs.html  settings.html  src.html  view.html
templates/user/: header.html  home.html  login.html  repo_new.html  settings.html  signup.html  view.html
