[package]
authors = ["Hunter Praska <hunter@wiggin-labs.com>"]
name = "valentine"
version = "0.1.0"

[dependencies]
bart = "0.1.4"
bart_derive = "0.1.4"
base64 = "0.9.0"
bcrypt = "0.1.5"
clap = "2.30.0"
diesel_migrations = "1.1.0"
env_logger = "0.5.3"
git2 = "0.6.11"
log = "0.4.1"
pulldown-cmark = "0.1.0"
quick-error = "1.2.1"
rand = "0.4.2"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
sha2 = "0.7.0"
time = "0.1.39"
toml = "0.4.5"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"

[dependencies.diesel]
features = [
    "postgres",
    "chrono",
    "r2d2",
]
version = "1.1.1"

[dependencies.explode]
git = "https://git.hunterpraska.com/hunter/explode"

[dependencies.hayaku]
git = "https://git.hunterpraska.com/hunter/hayaku"
