[package]
authors = ["Hunter Praska <hunter@wiggin-labs.com>"]
name = "valentine"
version = "0.1.0"

[dependencies]
bart = "0.1.4"
bart_derive = "0.1.4"
base64 = "0.9.2"
bcrypt = "0.2.0"
clap = "2.31.2"
diesel_migrations = "1.3.0"
env_logger = "0.5.10"
git2 = "0.7.1"
log = "0.4.1"
pulldown-cmark = "0.1.2"
quick-error = "1.2.2"
rand = "0.5.0"
serde = "1.0.65"
serde_derive = "1.0.65"
serde_json = "1.0.19"
sha2 = "0.7.1"
time = "0.1.40"
toml = "0.4.6"
dirs = "1.0.2"
humansize = "1.1.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.2"

[dependencies.diesel]
features = [
    "postgres",
    "chrono",
    "r2d2",
]
version = "1.3.0"

[dependencies.explode]
git = "https://git.hunterpraska.com/hunter/explode"

[dependencies.hayaku]
git = "https://git.hunterpraska.com/hunter/hayaku"

[dependencies.sessions]
git = "https://git.hunterpraska.com/hunter/sessions"
