[package]
authors = ["Hunter Praska <hunter@wiggin-labs.com>"]
name = "valentine"
version = "0.2.0"

[dependencies]
bart = "0.1.6"
bart_derive = "0.1.6"
base64 = "0.21.4"
env_logger = "0.10.0"
git2 = "0.18.0"
log = "0.4.20"
pulldown-cmark = "0.9.3"
quick-error = "2.0.1"
rand = "0.8.5"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.106"
sha2 = "0.10.7"
time = "0.3.28"
toml = "0.8.0"
dirs = "5.0.1"
humansize = "2.1.3"
bcrypt = "0.15.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
rusqlite_migration = "1.0.2"
html-escape = "0.2.13"

[dependencies.chrono]
features = ["serde"]
version = "0.4.30"

[dependencies.explode]
git = "https://git.hunterpraska.com/hunter/explode"

[dependencies.hayaku]
git = "https://git.hunterpraska.com/hunter/hayaku"

[dependencies.sessions]
git = "https://git.hunterpraska.com/hunter/sessions"

[dependencies.check-psql]
git = "https://git.hunterpraska.com/hunter/check-psql.git"

[dependencies.rusqlite]
features = ["bundled", "chrono"]
version = "0.29.0"

[dependencies.clap]
features = ["cargo"]
version = "4.4.3"
